fix docker file entrypoint